Closed Bug 1766210 Opened 2 years ago Closed 2 years ago

Undefined symbol _ZN7mozilla8profiler30GetCpuTimeSinceThreadStartInNsEPmRKNS0_12PlatformDataE

Categories

(Toolkit :: Performance Monitoring, defect)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- unaffected
firefox101 --- fixed

People

(Reporter: petr.sumbera, Assigned: florian)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

Solaris build fails with:

24:49.58 Undefined                      first referenced
24:49.58  symbol                            in file
24:49.58 _ZN7mozilla8profiler30GetCpuTimeSinceThreadStartInNsEPmRKNS0_12PlatformDataE ../../../tools/profiler/Unified_cpp_tools_profiler0.o  (symbol scope specifies local n)24:49.58 ld: fatal: symbol referencing errors

The first bad revision is:
changeset: 615162:6d54763521f1
user: Florian Quèze <florian@queze.net>
date: Sat Apr 23 04:38:19 2022 -0700
description:
Bug 1763474 - Report thread wake-ups and CPU time per thread through glean, r=gerald,chutten

Differential Revision: https://phabricator.services.mozilla.com/D141147
Keywords: regression
Regressed by: 1763474

The Bugbug bot thinks this bug should belong to the 'Toolkit::Telemetry' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Telemetry
Product: Firefox → Toolkit

Set release status flags based on info from the regressing bug 1763474

:florian, since you are the author of the regressor, bug 1763474, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(florian)
Assignee: nobody → florian
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Hi Petr, sorry for breaking this again and thanks for reporting it. Any chance you could verify that the patch I sent to phabricator fixes it for you? Thanks!

Flags: needinfo?(florian) → needinfo?(petr.sumbera)

I can confirm that your proposed fix resolved my issue.

Flags: needinfo?(petr.sumbera)
Has Regression Range: --- → yes

Setting component based on regressing bug. (Don't want BugBug to get the wrong idea)

Component: Telemetry → Performance Monitoring
Pushed by fqueze@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4a9e7610a29e
Avoid using GetCpuTimeSinceThreadStartInNs when MOZ_GECKO_PROFILER is not defined (tier 3 platforms), r=gerald.
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: