Bug 1766210 - Avoid using GetCpuTimeSinceThreadStartInNs when MOZ_GECKO_PROFILER is not defined (tier 3 platforms), r=gerald.

Differential Revision: https://phabricator.services.mozilla.com/D144541